--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -535,8 +535,9 @@ nav {
 #filter-wrapper {
   z-index: 999;
   pointer-events: auto;
+  /* end .content */
 }
-#filter-wrapper > label.filter-button {
+#filter-wrapper > label {
   display: block;
   -moz-transition: all 200ms ease-in;
   -webkit-transition: all 200ms ease-in;
@@ -557,7 +558,7 @@ nav {
   width: 120px;
   height: 2em;
 }
-#filter-wrapper > label.filter-button:hover {
+#filter-wrapper > label:hover {
   border: 1px solid #132b19;
   bottom: 12px;
   -webkit-transition: all 400ms ease-in;
@@ -566,21 +567,21 @@ nav {
   -o-transition: all 400ms ease-in;
   transition: all 400ms ease-in;
 }
-#filter-wrapper > label.filter-button:hover:after {
+#filter-wrapper > label:hover:after {
   border: 1px solid #595959;
   border-right: 1px solid transparent;
 }
-#filter-wrapper > label.filter-button:hover ~ .content {
+#filter-wrapper > label:hover ~ .content {
   bottom: -370px; /* content on hover */
 }
-#filter-wrapper > label.filter-button:hover:before {
+#filter-wrapper > label:hover:before {
   -moz-transform: rotate(180deg) translate(0, 1px);
   -o-transform: rotate(180deg) translate(0, 1px);
   -ms-transform: rotate(180deg) translate(0, 1px);
   -webkit-transform: rotate(180deg) translate(0, 1px);
   transform: rotate(180deg) translate(0, 1px);
 }
-#filter-wrapper > label.filter-button h2 {
+#filter-wrapper > label h2 {
   font-size: 14px;
   padding: 6px 20px;
   line-height: 0.2;
@@ -588,7 +589,7 @@ nav {
   font-weight: normal;
   text-transform: uppercase;
 }
-#filter-wrapper > label.filter-button:before {
+#filter-wrapper > label:before {
   content: "▾";
   -moz-transform: rotate(180deg) translate(0, -3px);
   -o-transform: rotate(180deg) translate(0, -3px);
@@ -605,53 +606,14 @@ nav {
   transition: all 400ms ease-in;
 }
 #filter-wrapper > label.filter-button-bottom {
-  display: block;
-  -moz-transition: all 200ms ease-in;
-  -webkit-transition: all 200ms ease-in;
-  -o-transition: all 200ms ease-in;
-  transition: all 200ms ease-in;
-  z-index: 2;
-  cursor: pointer;
-  right: 0px;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-  position: fixed;
-  transform-origin: top center;
-  font-size: 1.2em;
   z-index: 1;
   width: 50px;
   height: 2em;
   background: #F2F2F2;
   color: #124d20;
   border: 1px solid black;
-  /* &:hover{
-    border:1px solid $darkgreen;
-        bottom:0px; // set the button stick to the bottom
-    @include transition(all 400ms ease-in); 
-      &:after{
-        border: 1px solid lighten(black, 35%);
-        border-right: 1px solid transparent;
-      }
-    ~.content{
-      bottom:-370px; /* content on hover */
-  /* end .content */
 }
-#filter-wrapper > label.filter-button-bottom h2 {
-  font-size: 14px;
-  padding: 6px 20px;
-  line-height: 0.2;
-  color: #404040;
-  font-weight: normal;
-  text-transform: uppercase;
-}
-#filter-wrapper > label.filter-button-bottom:before {
-  content: "▸";
-  position: absolute;
-  right: 0.93em;
-  bottom: 0.3em;
-}
-#filter-wrapper > label.filter-button-bottom .content {
+#filter-wrapper .content {
   position: fixed;
   right: 0;
   left: 0;
@@ -674,7 +636,7 @@ nav {
   justify-content: space-between;
   flex-wrap: wrap;
 }
-#filter-wrapper > label.filter-button-bottom .content section {
+#filter-wrapper .content section {
   width: 45%;
   /**
    * Provide a border when hovered and when the input is checked
@@ -683,73 +645,72 @@ nav {
     transform: scale(2);
   }*/
 }
-#filter-wrapper > label.filter-button-bottom .content section header {
+#filter-wrapper .content section header {
   display: flex;
   align-items: stretch;
   justify-content: space-between;
 }
-#filter-wrapper > label.filter-button-bottom .content section header h3 {
+#filter-wrapper .content section header h3 {
   margin: 0;
 }
-#filter-wrapper > label.filter-button-bottom .content section header h3 em {
+#filter-wrapper .content section header h3 em {
   color: #757575;
   font-size: 0.6em;
 }
-#filter-wrapper > label.filter-button-bottom .content section ol {
+#filter-wrapper .content section ol {
   list-style-type: none;
   max-width: auto;
   margin-left: -40px;
 }
-#filter-wrapper > label.filter-button-bottom .content section ol li {
+#filter-wrapper .content section ol li {
   margin-bottom: 4px;
 }
-#filter-wrapper > label.filter-button-bottom .content section ol li label {
+#filter-wrapper .content section ol li label {
   display: block;
   position: relative;
   cursor: pointer;
   padding: 4px;
   z-index: 2; /* set a lower z-index than the maps */
 }
-#filter-wrapper > label.filter-button-bottom .content section ol li label span {
+#filter-wrapper .content section ol li label span {
   font-size: 18px;
 }
-#filter-wrapper > label.filter-button-bottom .content section ol li label span em {
+#filter-wrapper .content section ol li label span em {
   font-size: 14px;
   margin-left: 4px;
   font-style: normal;
 }
-#filter-wrapper > label.filter-button-bottom .content section ol li label img {
+#filter-wrapper .content section ol li label img {
   height: 40px;
   width: 40px;
   transition-duration: 0.2s;
   vertical-align: middle;
   margin-right: 8px;
 }
-#filter-wrapper > label.filter-button-bottom .content section ol li:hover {
+#filter-wrapper .content section ol li:hover {
   background: #e0e0e0;
   opacity: 0.9;
 }
-#filter-wrapper > label.filter-button-bottom .content section ol input[type=checkbox][id^=checkbox] {
+#filter-wrapper .content section ol input[type=checkbox][id^=checkbox] {
   display: none;
 }
-#filter-wrapper > label.filter-button-bottom .content section ol input[type=checkbox][id^=mapcheckbox] {
+#filter-wrapper .content section ol input[type=checkbox][id^=mapcheckbox] {
   display: none;
 }
-#filter-wrapper > label.filter-button-bottom .content section ol :checked + label {
+#filter-wrapper .content section ol :checked + label {
   font-weight: bold;
   background: #132b19;
   color: white;
 }
-#filter-wrapper > label.filter-button-bottom .content section ol :checked + label img {
-  transform: scale(1);
+#filter-wrapper .content section ol :checked + label img {
   border: 1px solid #124d20;
   opacity: 1;
   background: white;
 }
-#filter-wrapper > label.filter-button-bottom section:first-of-type ol li {
+#filter-wrapper section:first-of-type ol li {
   position: relative;
 }
-#filter-wrapper > label.filter-button-bottom section:first-of-type ol li img {
+#filter-wrapper section:first-of-type ol li img {
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -759,10 +720,10 @@ nav {
   -o-transition: all 300ms ease-in;
   transition: all 300ms ease-in;
 }
-#filter-wrapper > label.filter-button-bottom section:first-of-type ol li:hover {
+#filter-wrapper section:first-of-type ol li:hover {
   z-index: 3;
 }
-#filter-wrapper > label.filter-button-bottom section:first-of-type ol li:hover img {
+#filter-wrapper section:first-of-type ol li:hover img {
   -moz-transform: scale(2) translate(95px, 0);
   -o-transform: scale(2) translate(95px, 0);
   -ms-transform: scale(2) translate(95px, 0);
@@ -772,25 +733,25 @@ nav {
   opacity: 1;
   z-index: 3;
 }
-#filter-wrapper > label.filter-button-bottom section:last-of-type ol li img {
+#filter-wrapper section:last-of-type ol li img {
   border-radius: 0;
   border: none;
 }
-#filter-wrapper > label.filter-button-bottom input#filter[type=checkbox] {
+#filter-wrapper input#filter[type=checkbox] {
   display: none;
 }
-#filter-wrapper > label.filter-button-bottom input#filter[type=checkbox]:checked ~ .content {
+#filter-wrapper input#filter[type=checkbox]:checked ~ .content {
   bottom: 0px; /* content on click */
 }
-#filter-wrapper > label.filter-button-bottom input#filter[type=checkbox]:checked ~ label.filter-button {
+#filter-wrapper input#filter[type=checkbox]:checked ~ label.filter-button {
   bottom: 385px;
   background: #132b19;
   /* cross icon */
 }
-#filter-wrapper > label.filter-button-bottom input#filter[type=checkbox]:checked ~ label.filter-button h2 {
+#filter-wrapper input#filter[type=checkbox]:checked ~ label.filter-button h2 {
   color: white;
 }
-#filter-wrapper > label.filter-button-bottom input#filter[type=checkbox]:checked ~ label.filter-button:before {
+#filter-wrapper input#filter[type=checkbox]:checked ~ label.filter-button:before {
   content: "▾";
   -moz-transform: rotate(0) translate(0, 1px);
   -o-transform: rotate(0) translate(0, 1px);
@@ -799,15 +760,15 @@ nav {
   transform: rotate(0) translate(0, 1px);
   color: white;
 }
-#filter-wrapper > label.filter-button-bottom input#filter[type=checkbox]:checked ~ label.filter-button:hover:before {
+#filter-wrapper input#filter[type=checkbox]:checked ~ label.filter-button:hover:before {
   transform: translate(0, 3px);
 }
-#filter-wrapper > label.filter-button-bottom #legend-wrapper {
+#filter-wrapper #legend-wrapper {
   z-index: 99;
   pointer-events: auto;
   /* end .content */
 }
-#filter-wrapper > label.filter-button-bottom #legend-wrapper > label {
+#filter-wrapper #legend-wrapper > label {
   display: block;
   -webkit-transition: all 400ms ease-in;
   -moz-transition: all 400ms ease-in;
@@ -834,7 +795,7 @@ nav {
   width: 120px;
   height: 2em;
 }
-#filter-wrapper > label.filter-button-bottom #legend-wrapper > label:hover {
+#filter-wrapper #legend-wrapper > label:hover {
   border: 1px solid #132b19;
   right: -18px;
   -webkit-transition: all 400ms ease-in;
@@ -843,21 +804,21 @@ nav {
   -o-transition: all 400ms ease-in;
   transition: all 400ms ease-in;
 }
-#filter-wrapper > label.filter-button-bottom #legend-wrapper > label:hover:after {
+#filter-wrapper #legend-wrapper > label:hover:after {
   border: 1px solid #595959;
   border-right: 1px solid transparent;
 }
-#filter-wrapper > label.filter-button-bottom #legend-wrapper > label:hover ~ .content {
+#filter-wrapper #legend-wrapper > label:hover ~ .content {
   right: -200px; /* content on hover */
 }
-#filter-wrapper > label.filter-button-bottom #legend-wrapper > label:hover:before {
+#filter-wrapper #legend-wrapper > label:hover:before {
   -moz-transform: rotate(180deg) translate(0, -1px);
   -o-transform: rotate(180deg) translate(0, -1px);
   -ms-transform: rotate(180deg) translate(0, -1px);
   -webkit-transform: rotate(180deg) translate(0, -1px);
   transform: rotate(180deg) translate(0, -1px);
 }
-#filter-wrapper > label.filter-button-bottom #legend-wrapper > label h2 {
+#filter-wrapper #legend-wrapper > label h2 {
   font-size: 14px;
   padding: 6px 20px;
   line-height: 0.5;
@@ -865,7 +826,7 @@ nav {
   font-weight: normal;
   text-transform: uppercase;
 }
-#filter-wrapper > label.filter-button-bottom #legend-wrapper > label:before {
+#filter-wrapper #legend-wrapper > label:before {
   content: "▾";
   -moz-transform: rotate(180deg) translate(0, -3px);
   -o-transform: rotate(180deg) translate(0, -3px);
@@ -881,7 +842,7 @@ nav {
   -o-transition: all 400ms ease-in;
   transition: all 400ms ease-in;
 }
-#filter-wrapper > label.filter-button-bottom #legend-wrapper .content {
+#filter-wrapper #legend-wrapper .content {
   position: fixed;
   top: 0;
   bottom: 0;
@@ -901,21 +862,21 @@ nav {
   margin: auto;
   border: 1px solid #132b19;
 }
-#filter-wrapper > label.filter-button-bottom #legend-wrapper input#legend[type=checkbox] {
+#filter-wrapper #legend-wrapper input#legend[type=checkbox] {
   display: none;
 }
-#filter-wrapper > label.filter-button-bottom #legend-wrapper input#legend[type=checkbox]:checked ~ .content {
+#filter-wrapper #legend-wrapper input#legend[type=checkbox]:checked ~ .content {
   right: 0px; /* content on click */
 }
-#filter-wrapper > label.filter-button-bottom #legend-wrapper input#legend[type=checkbox]:checked ~ label.legend-button {
+#filter-wrapper #legend-wrapper input#legend[type=checkbox]:checked ~ label.legend-button {
   right: 185px;
   background: #132b19;
   /* cross icon */
 }
-#filter-wrapper > label.filter-button-bottom #legend-wrapper input#legend[type=checkbox]:checked ~ label.legend-button h2 {
+#filter-wrapper #legend-wrapper input#legend[type=checkbox]:checked ~ label.legend-button h2 {
   color: white;
 }
-#filter-wrapper > label.filter-button-bottom #legend-wrapper input#legend[type=checkbox]:checked ~ label.legend-button:before {
+#filter-wrapper #legend-wrapper input#legend[type=checkbox]:checked ~ label.legend-button:before {
   content: "▾";
   -moz-transform: rotate(0) translate(0, 1px);
   -o-transform: rotate(0) translate(0, 1px);
@@ -924,6 +885,6 @@ nav {
   transform: rotate(0) translate(0, 1px);
   color: white;
 }
-#filter-wrapper > label.filter-button-bottom #legend-wrapper input#legend[type=checkbox]:checked ~ label.legend-button:hover:before {
+#filter-wrapper #legend-wrapper input#legend[type=checkbox]:checked ~ label.legend-button:hover:before {
   transform: translate(0, 3px);
 }
