--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -613,6 +613,30 @@ nav {
   color: #124d20;
   border: 1px solid black;
 }
+#filter-wrapper > label.filter-button-bottom h2 {
+  font-size: 14px;
+  padding: 6px 20px;
+  line-height: 0.2;
+  color: #404040;
+  font-weight: normal;
+  text-transform: uppercase;
+}
+#filter-wrapper > label.filter-button-bottom:before {
+  content: "▾";
+  -moz-transform: rotate(0deg) translate(0, -3px);
+  -o-transform: rotate(0deg) translate(0, -3px);
+  -ms-transform: rotate(0deg) translate(0, -3px);
+  -webkit-transform: rotate(0deg) translate(0, -3px);
+  transform: rotate(0deg) translate(0, -3px);
+  position: absolute;
+  right: 0.93em;
+  bottom: 0.3em;
+  -webkit-transition: all 400ms ease-in;
+  -moz-transition: all 400ms ease-in;
+  -ms-transition: all 400ms ease-in;
+  -o-transition: all 400ms ease-in;
+  transition: all 400ms ease-in;
+}
 #filter-wrapper .content {
   position: fixed;
   right: 0;
@@ -761,6 +785,27 @@ nav {
   color: white;
 }
 #filter-wrapper input#filter[type=checkbox]:checked ~ label.filter-button:hover:before {
+  transform: translate(0, 3px);
+}
+#filter-wrapper input#filter[type=checkbox]:checked ~ label.filter-button input#filter[type=checkbox]:checked ~ label.filter-button-bottom-7 {
+  bottom: 385px;
+  background: #132b19;
+  /* cross icon */
+}
+#filter-wrapper input#filter[type=checkbox]:checked ~ label.filter-button input#filter[type=checkbox]:checked ~ label.filter-button-bottom-7 h2 {
+  color: white;
+}
+#filter-wrapper input#filter[type=checkbox]:checked ~ label.filter-button input#filter[type=checkbox]:checked ~ label.filter-button-bottom-7:before {
+  content: "▸";
+  display: inline-block;
+  -moz-transform: rotate(0) translate(0, 1px);
+  -o-transform: rotate(0) translate(0, 1px);
+  -ms-transform: rotate(0) translate(0, 1px);
+  -webkit-transform: rotate(0) translate(0, 1px);
+  transform: rotate(0) translate(0, 1px);
+  color: white;
+}
+#filter-wrapper input#filter[type=checkbox]:checked ~ label.filter-button input#filter[type=checkbox]:checked ~ label.filter-button-bottom-7:hover:before {
   transform: translate(0, 3px);
 }
 
