fix: change the explore guidance text

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -118,7 +118,7 @@ layout: base.liquid
         </label>
 
         <div class="content">
-            <p>Click on the individual features or maps to customise your view. Select or deselect all if needed.</p>
+            <p>Click maps to show features. Use feature list to choose features displayed. Select or deselect all if needed.</p>
 
             <section>
                 <header><h3>Maps <em><span id="totalMapFiltersApplied">0</span>/17 Selected</em></h3>
