--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -593,6 +593,7 @@ nav {
         background: #F2F2F2;
         color: #124d20;
         border:1px solid black;
+        bottom: 0; //set the button to stick to bottom
         
         h2{
           font-size: 14px;
@@ -727,7 +728,7 @@ nav {
              &:hover{
                z-index: 3;
                img{
-                 @include transform(scale(2)translate(90px,0));
+                 @include transform(scale(2)translate(100px,0));
                  box-shadow: 1px 1px 3px#666, 0 0 1px #777 ;
                  opacity:1;
                  z-index: 3;
