--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -612,6 +612,7 @@ nav {
   background: #F2F2F2;
   color: #124d20;
   border: 1px solid black;
+  bottom: 0;
 }
 #filter-wrapper > label.filter-button-bottom h2 {
   font-size: 14px;
@@ -748,11 +749,11 @@ nav {
   z-index: 3;
 }
 #filter-wrapper section:first-of-type ol li:hover img {
-  -moz-transform: scale(2) translate(90px, 0);
-  -o-transform: scale(2) translate(90px, 0);
-  -ms-transform: scale(2) translate(90px, 0);
-  -webkit-transform: scale(2) translate(90px, 0);
-  transform: scale(2) translate(90px, 0);
+  -moz-transform: scale(2) translate(100px, 0);
+  -o-transform: scale(2) translate(100px, 0);
+  -ms-transform: scale(2) translate(100px, 0);
+  -webkit-transform: scale(2) translate(100px, 0);
+  transform: scale(2) translate(100px, 0);
   box-shadow: 1px 1px 3px #666, 0 0 1px #777;
   opacity: 1;
   z-index: 3;
