--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -324,6 +324,7 @@ layout: base.liquid
 <script defer type="text/javascript" src="{{ '/assets/node_modules/leaflet/dist/leaflet.js' | url }}"></script>
 <script defer type="text/javascript" src="{{ '/assets/node_modules/leaflet-dvf/dist/leaflet-dvf.js' | url }}"></script>
 <script defer type="text/javascript" src="{{ '/assets/js/leaflet/plugins/leaflet.textpath.js' | url }}"></script>
+<script defer type="text/javascript" src="{{ '/assets/js/leaflet/plugins/leaflet-polygon.fillPattern.js' | url }}"></script>
 <script defer type="text/javascript" src="{{ '/assets/node_modules/d3/dist/d3.min.js' | url }}"></script>
 
 <script>
