--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -140,7 +140,7 @@ layout: base.liquid
         <div class="content">
             <p>Click maps to show features. Use feature list to choose features displayed. Select or deselect all if needed.</p>
 
-            <section>
+            <section id="mapFilters">
                 <header><h3>Maps <em><span id="totalMapFiltersApplied">0</span>/16 Selected</em></h3>
                 <span><input type="checkbox" id="selectallMaps" name="selectall" value="All">
                 <label for="selectallMaps">Select All</label></span>
@@ -250,7 +250,7 @@ layout: base.liquid
                 </ol>
             </section>
 
-            <section id="mapFilters" class="filterDisabled">
+            <section id="featureFilters" class="filterDisabled">
                 <header><h3>Features <em><span id="totalExploreFiltersApplied">0</span>/6 Selected</em></h3>
                 <span><input type="checkbox" id="selectallFeatures" name="selectall" value="All">
                 <label for="selectallFeatures">Select All</label></span>
