--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -25,7 +25,7 @@ layout: base.liquid
     </style>
 </head>
 <body>
-
+{% include "header" %}
 
 <div id="basemap"></div>
 
@@ -111,7 +111,7 @@ layout: base.liquid
         </article>
 
         <div id="s6-end" class="article_spacer">&nbsp;</div>
-        <div  class="storyTitleSpacerBelow"></div>
+        <div class="storyTitleSpacerBelow"></div>
     </section>
 </div>
 
@@ -400,6 +400,6 @@ layout: base.liquid
     });*/
 </script>
 
-
+{% include "footer" %}
 </body>
 </html>
